centered text, finished functions, working on UI

--- a/index.html
+++ b/index.html
@@ -17,10 +17,43 @@
       </div>
       <div class="flexBox">
 
-    <span><img id="image" onclick="rest(hero)" src="img.jpg" alt=""/>Rest</span>
-    <img id="image" onclick="pickUpItem()" src="laptop.jpg" alt="">Weaponize
-    <img id="image" onclick="doBattle()" src="monk.jpg" alt="">Nemesis
-    <img id="image" onclick="equipweapon()" src="backpack.jpg" alt="">Equip
+        <div class="container">
+          <span id="rest">
+            <img id="image"
+             src="img.jpg" alt=""/>
+          </span>
+          <div class="text-block">
+            <h4>Rest</h4>
+          </div>
+        </div>
+
+        <div class="container">
+          <span id="item">
+            <img id="image" onclick="pickUpItem()" src="laptop.jpg" alt=""/>
+          </span>
+          <div class="text-block" style="right:40px !important;">
+            <h4>Weaponize</h4>
+          </div>
+        </div>
+
+        <div class="container">
+          <span id="battle">
+            <img id="image" onclick="doBattle()" src="monk.jpg" alt=""/>
+          </span>
+          <div class="text-block" style="right:50px !important;">
+            <h4>Nemesis</h4>
+          </div>
+        </div>
+        <div class="container">
+
+          <span id="equip">
+            <img id="image" onclick="doBattle()" src="backpack.jpg" alt=""/>
+          </span>
+          <div class="text-block" >
+            <h4>Equip</h4>
+          </div>
+        </div>
+
 
     <div class="outerBox"></div>
 
