--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
         <link rel="stylesheet" href="master.css">
     </head>
     <body>
+
       <div class="outerBox"></div>
 
       <div class="header">
         <h1>Save your laptop</h1>
         <h2>Activate Julius</h2>
       </div>
+      <div class="parentVital">
+        <div class="vitals">
+        <div class="name"></div>
+        <div class="health"></div>
+        <div class="weapon"></div>
+        <div class="damage"></div>
+      </div>
+      </div>
+      <br>
       <div class="flexBox">
 
         <div class="container">
@@ -58,7 +68,6 @@
     <div class="outerBox"></div>
 
       </div>
-
 
 
 
