--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
       </div>
       <div class="parentVital">
         <div class="vitals">
+          <h3>You</h3>
+
         <div class="name"></div>
         <div class="health"></div>
         <div class="weapon"></div>
         <div class="damage"></div>
+        <div class="inventory">
+          <h3>Your Current inventory</h3>
+          <div class="currentWeapon"></div>
+
+          <div class="currentDamage"></div>
+
+        </div>
       </div>
       </div>
       <br>
