--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="container">
           <span id="item">
-            <img id="image" onclick="pickUpItem()" src="laptop.jpg" alt=""/>
+            <img id="image"  src="laptop.jpg" alt=""/>
           </span>
           <div class="text-block" style="right:40px !important;">
             <h4>Weaponize</h4>
@@ -58,7 +58,7 @@
 
         <div class="container">
           <span id="battle">
-            <img id="image" onclick="doBattle()" src="monk.jpg" alt=""/>
+            <img id="image"  src="monk.jpg" alt=""/>
           </span>
           <div class="text-block" style="right:50px !important;">
             <h4>Nemesis</h4>
@@ -67,7 +67,7 @@
         <div class="container">
 
           <span id="equip">
-            <img id="image" onclick="doBattle()" src="backpack.jpg" alt=""/>
+            <img id="image"  src="backpack.jpg" alt=""/>
           </span>
           <div class="text-block" >
             <h4>Equip</h4>
@@ -76,7 +76,6 @@
 
 
     <div class="outerBox"></div>
-
       </div>
 
 
